fix(ui): Somewhat better alignment left column

--- a/ui/src/pages/plan/rules/Rule.css
+++ b/ui/src/pages/plan/rules/Rule.css
@@ -7,7 +7,7 @@
 }
 
 .ruledescription {
-    max-width: 400px;
+    max-width: 100%;
     border: 1px solid #ddd;
     overflow: hidden;
     border-radius: 5px;
